--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -59,6 +60,18 @@
             android:textColor="@color/black"
             android:layout_margin="@dimen/dimen_18"/>
 
+    <include
+            layout="@layout/forecast_headers"
+            android:layout_height="@dimen/dimen_30"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/dimen_20"
+            app:layout_goneMarginBottom="@dimen/dimen_20"
+            android:layout_marginBottom="@dimen/dimen_10"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvluas_direction"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/fl_trams"/>
+
     <ImageView
             android:layout_width="@dimen/dimen_200"
             android:layout_height="@dimen/dimen_200"
@@ -83,6 +96,7 @@
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_trams"
                 android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/dimen_20"
                 android:layout_height="match_parent"/>
 
         <TextView
